force-app/main/default/objects/TVA_CO__Link__c/TVA_CO__Link__c.object-meta.xml
<CustomObject>
    <label>Link</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>