force-app/main/default/objects/TVA_CO__Link__c/fields/TVA_CO__Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Redirect_URL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>