force-app/main/default/objects/TVA_CO__Link__c/fields/TVA_CO__Redirect_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Redirect_URL_Link__c</fullName>
    <label>Redirect URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>