force-app/main/default/objects/TVA_CO__Link__c/fields/TVA_CO__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__UniqueId__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>UniqueId</label>
    <type>AutoNumber</type>
</CustomField>